adding temporrary placeholder values for run 2022preEE and 2022postEE

--- a/configs/parameters/correction_filelist.yaml
+++ b/configs/parameters/correction_filelist.yaml
@@ -3,10 +3,12 @@ roccor_file:
   2016postVFP: data/roch_corr/RoccoR2016bUL.txt
   '2017': data/roch_corr/RoccoR2017UL.txt
   '2018': data/roch_corr/RoccoR2018UL.txt
-  2022EE: data/roch_corr/RoccoR2018UL.txt
+  2022preEE: data/roch_corr/RoccoR2018UL.txt
+  2022postEE: data/roch_corr/RoccoR2018UL.txt
 res_calib_path:
   2016preVFP: data/res_calib/
   2016postVFP: data/res_calib/
   '2017': data/res_calib/
   '2018': data/res_calib/
-  2022EE: data/res_calib/
+  2022preEE: data/res_calib/
+  2022postEE: data/res_calib/
