--- a/configs/parameters/misc.yaml
+++ b/configs/parameters/misc.yaml
@@ -43,7 +43,18 @@ sths_names:
   - Mjj1500
   - PTH25
   - JET01
-  2022EE:
+  2022preEE:
+  - Yield
+  - PTH200
+  - Mjj60
+  - Mjj120
+  - Mjj350
+  - Mjj700
+  - Mjj1000
+  - Mjj1500
+  - PTH25
+  - JET01
+  2022postEE:
   - Yield
   - PTH200
   - Mjj60
@@ -95,7 +106,17 @@ btag_systs:
   - hf
   - lfstats1
   - lfstats2
-  2022EE:
+  2022preEE:
+  - jes
+  - lf
+  - hfstats1
+  - hfstats2
+  - cferr1
+  - cferr2
+  - hf
+  - lfstats1
+  - lfstats2
+  2022postEE:
   - jes
   - lf
   - hfstats1
@@ -138,7 +159,15 @@ event_flags:
   - globalSuperTightHalo2016Filter
   - goodVertices
   - BadChargedCandidateFilter
-  2022EE:
+  2022preEE:
+  - BadPFMuonFilter
+  - EcalDeadCellTriggerPrimitiveFilter
+  - HBHENoiseFilter
+  - HBHENoiseIsoFilter
+  - globalSuperTightHalo2016Filter
+  - goodVertices
+  - BadChargedCandidateFilter
+  2022postEE:
   - BadPFMuonFilter
   - EcalDeadCellTriggerPrimitiveFilter
   - HBHENoiseFilter
@@ -151,16 +180,19 @@ do_l1prefiring_wgts:
   2016postVFP: true
   '2017': true
   '2018': false
-  2022EE: false
+  2022preEE: false
+  2022postEE: false
 n_pdf_variations:
   2016preVFP: 100
   2016postVFP: 100
   '2017': 33
   '2018': 33
-  2022EE: 33
+  2022preEE: 33
+  2022postEE: 33
 dnn_max:
   2016preVFP: 1.75
   2016postVFP: 1.75
   '2017': 2.0
   '2018': 2.35
-  2022EE: 2.35
+  2022preEE: 2.35
+  2022postEE: 2.35
