--- a/src/lib/histogram/plot_settings.json
+++ b/src/lib/histogram/plot_settings.json
@@ -17,7 +17,7 @@
     },
     "dimuon_eta": {
         "variable": "dimuon_eta",
-        "binning_linspace": [-5, 5, 30],
+        "binning_linspace": [-2.4, 2.4, 30],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$\\eta(\\mu\\mu)$ [GeV]",
@@ -25,7 +25,7 @@
     },
     "dimuon_rapidity": {
         "variable": "dimuon_rapidity",
-        "binning_linspace": [-5, 5, 30],
+        "binning_linspace": [-2.5, 2.5, 30],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$y(\\mu\\mu)$ [GeV]",
@@ -119,6 +119,14 @@
         "xlabel": "$m_{jj}$ [GeV]",
         "color": "royalblue"
     },
+    "jj_eta": {
+        "variable": "jj_eta",
+        "binning_linspace": [-4.7, 4.7, 30],
+        "density": false,
+        "ylabel": "Events",
+        "xlabel": "$\\eta_{jj}$",
+        "color": "royalblue"
+    },
     "jj_dEta": {
         "variable": "jj_dEta",
         "binning_linspace": [0, 9, 30],
@@ -145,7 +153,7 @@
     },
     "jet1_eta": {
         "variable": "jet1_eta",
-        "binning_linspace": [-5, 5, 30],
+        "binning_linspace": [-4.7, 4.7, 30],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (jet1)$",
@@ -169,7 +177,7 @@
     },
     "jet2_eta": {
         "variable": "jet2_eta",
-        "binning_linspace": [-5, 5, 30],
+        "binning_linspace": [-4.7, 4.7, 30],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (jet2)$",
@@ -193,7 +201,7 @@
     },
     "mu1_eta": {
         "variable": "mu1_eta",
-        "binning_linspace": [-3, 3, 30],
+        "binning_linspace": [-2.4, 2.4, 30],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (mu1)$",
@@ -217,7 +225,7 @@
     },
     "mu2_eta": {
         "variable": "mu2_eta",
-        "binning_linspace": [-3, 3, 30],
+        "binning_linspace": [-2.4, 2.4, 30],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (mu2)$",
