adding some overwrite, but need a more elegant solution in the future

--- a/configs/parameters/cross_sections.yaml
+++ b/configs/parameters/cross_sections.yaml
@@ -4,8 +4,9 @@ cross_sections:
   dy_M-50_nocut: 6450.0
   dy_M-100To200: 254.2 # original value: 254.2
   dy_VBF_filter: 2.01  # subjet to change
-  dy_m105_160_vbf_amc: 2.01 # subjet to change
   dy_VBF_filter_customJMEoff: 2.01 # subjet to change
+  dy_M-50To120: 254.2 # subjet to change
+  dy_M-120To200: 254.2 # subjet to change
   dy_0j: 4620.52
   dy_1j: 922.5
   dy_2j: 293.6
@@ -15,6 +16,7 @@ cross_sections:
     '2017': 2.04
     '2018': 2.03
   # dy_m105_160_amc: 47.17
+  dy_m105_160_vbf_amc: 2.03 # temporary write in for 2018 value. In the future, I think I need to rewrite this yml structure
   # dy_m105_160_vbf_amc:
   #   '2016': 1.77
   #   '2017': 2.04
