--- a/configs/parameters/correction_filelist.yaml
+++ b/configs/parameters/correction_filelist.yaml
@@ -6,9 +6,21 @@ roccor_file:
   2022preEE: data/roch_corr/RoccoR2018UL.txt
   2022postEE: data/roch_corr/RoccoR2018UL.txt
 res_calib_path:
-  2016preVFP: data/res_calib/
-  2016postVFP: data/res_calib/
-  '2017': data/res_calib/
-  '2018': data/res_calib/
-  2022preEE: data/res_calib/
-  2022postEE: data/res_calib/
+  2016preVFP:
+    MC: data/res_calib/res_calib_MC_2016.root
+    Data: data/res_calib/res_calib_Data_2016.root
+  2016postVFP:
+    MC: data/res_calib/res_calib_MC_2016.root
+    Data: data/res_calib/res_calib_Data_2016.root
+  '2017':
+    MC: data/res_calib/res_calib_MC_2017.root
+    Data: data/res_calib/res_calib_Data_2017.root
+  '2018':
+    MC: data/res_calib/res_calib_MC_2018.root
+    Data: data/res_calib/res_calib_Data_2018.root
+  2022preEE:
+    MC: data/res_calib/res_calib_MC_2018.root
+    Data: data/res_calib/res_calib_Data_2018.root
+  2022postEE:
+    MC: data/res_calib/res_calib_MC_2018.root
+    Data: data/res_calib/res_calib_Data_2018.root
