adding changes to config files for Run3 data that I changed long ago, but didn't push

--- a/configs/parameters/SF_filelist.yaml
+++ b/configs/parameters/SF_filelist.yaml
@@ -24,15 +24,15 @@ pu_file_data:
   2016postVFP: data/pileup/puData2016_UL_withVar.root
   '2017': data/pileup/puData2017_UL_withVar.root
   '2018': data/pileup/puData2018_UL_withVar.root
-  2022preEE: data/pileup/puData2018_UL_withVar.root
-  2022postEE: data/pileup/puData2018_UL_withVar.root
+  2022preEE: dummy_only_pu_file_mc_is_needed
+  2022postEE: dummy_only_pu_file_mc_is_needed
 pu_file_mc:
   2016preVFP: data/pileup/mix_2016_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
   2016postVFP: data/pileup/mix_2016_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
   '2017': data/pileup/mix_2017_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
   '2018': data/pileup/mix_2018_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
-  2022preEE: data/pileup/Run3_2022_LHC_Simulation_10h_2h_cfi.yaml
-  2022postEE: data/pileup/Run3_2022_LHC_Simulation_10h_2h_cfi.yaml
+  2022preEE: data/pileup/2022_Summer22/puWeights.json.gz 
+  2022postEE: data/pileup/2022_Summer22EE/puWeights.json.gz 
 muSFFileList:
   2016preVFP:
   - id:
