--- a/configs/parameters/lumi.yaml
+++ b/configs/parameters/lumi.yaml
@@ -10,5 +10,5 @@ lumimask:
   2016postVFP: data/lumimasks/Cert_271036-284044_13TeV_Legacy2016_Collisions16_JSON.txt
   '2017': data/lumimasks/Cert_294927-306462_13TeV_UL2017_Collisions17_GoldenJSON.txt
   '2018': data/lumimasks/Cert_314472-325175_13TeV_Legacy2018_Collisions18_JSON.txt
-  2022preEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.txt
-  2022postEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.txt
+  2022preEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json
+  2022postEE: data/lumimasks/Cert_Collisions2022_355100_362760_Golden.json
