--- a/src/lib/histogram/plot_settings_vbfCat_MVA_input.json
+++ b/src/lib/histogram/plot_settings_vbfCat_MVA_input.json
@@ -1,7 +1,7 @@
 {
     "dimuon_mass": {
         "variable": "dimuon_mass",
-        "binning_linspace": [110, 150, 30],
+        "binning_linspace": [110, 150, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$m_{\\mu\\mu}$ [GeV]",
@@ -9,7 +9,7 @@
     },
     "dimuon_pt": {
         "variable": "dimuon_pt",
-        "binning_linspace": [0, 200, 30],
+        "binning_linspace": [0, 300, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$p_T(\\mu\\mu)$ [GeV]",
@@ -17,7 +17,7 @@
     },
     "dimuon_eta": {
         "variable": "dimuon_eta",
-        "binning_linspace": [-2.4, 2.4, 30],
+        "binning_linspace": [-2.4, 2.4, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$\\eta(\\mu\\mu)$ [GeV]",
@@ -25,7 +25,7 @@
     },
     "dimuon_rapidity": {
         "variable": "dimuon_rapidity",
-        "binning_linspace": [-2.5, 2.5, 30],
+        "binning_linspace": [-2.5, 2.5, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$y(\\mu\\mu)$ [GeV]",
@@ -33,7 +33,7 @@
     },
     "dimuon_cos_theta_cs": {
         "variable": "dimuon_cos_theta_cs",
-        "binning_linspace": [-1, 1, 30],
+        "binning_linspace": [-1, 1, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$cos(\\theta_{CS})$",
@@ -41,7 +41,7 @@
     },
     "dimuon_phi_cs": {
         "variable": "dimuon_phi_cs",
-        "binning_linspace": [-3.15, 3.15, 30],
+        "binning_linspace": [-3.15, 3.15, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "\\phi_{CS}$",
@@ -49,7 +49,7 @@
     },
     "dimuon_cos_theta_eta": {
         "variable": "dimuon_cos_theta_eta",
-        "binning_linspace": [-1, 1, 30],
+        "binning_linspace": [-1, 1, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$cos(\\theta_{CS})$",
@@ -57,7 +57,7 @@
     },
     "dimuon_phi_eta": {
         "variable": "dimuon_phi_eta",
-        "binning_linspace": [0, 3.15, 30],
+        "binning_linspace": [0, 3.15, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "\\phi_{CS}$",
@@ -65,7 +65,7 @@
     },
     "rpt": {
         "variable": "rpt",
-        "binning_linspace": [0, 1, 30],
+        "binning_linspace": [0, 1, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$R_{p_T}$",
@@ -73,7 +73,7 @@
     },
     "ll_zstar_log": {
         "variable": "ll_zstar_log",
-        "binning_linspace": [-2.4, 2.4, 30],
+        "binning_linspace": [-2, 2, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "ll_zstar_log",
@@ -81,7 +81,7 @@
     },
     "mmj_min_dEta": {
         "variable": "mmj_min_dEta",
-        "binning_linspace": [0, 8, 30],
+        "binning_linspace": [0, 8, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$min \\Delta\\eta_{\\mu\\mu,j}$",
@@ -89,7 +89,7 @@
     },
     "mmj_min_dPhi": {
         "variable": "mmj_min_dPhi",
-        "binning_linspace": [0, 3.15, 30],
+        "binning_linspace": [0, 3.15, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$min \\Delta\\phi_{\\mu\\mu,j}$",
@@ -105,7 +105,7 @@
     },
     "gjj_mass": {
         "variable": "gjj_mass",
-        "binning_linspace": [0, 2500, 30],
+        "binning_linspace": [0, 2500, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$gen m_{jj}$ [GeV]",
@@ -113,7 +113,7 @@
     },
     "jj_mass": {
         "variable": "jj_mass",
-        "binning_linspace": [0, 2500, 30],
+        "binning_linspace": [400, 2500, 22],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$m_{jj}$ [GeV]",
@@ -121,15 +121,23 @@
     },
     "jj_eta": {
         "variable": "jj_eta",
-        "binning_linspace": [-4.7, 4.7, 30],
+        "binning_linspace": [-4.7, 4.7, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta_{jj}$",
         "color": "royalblue"
     },
+    "jj_pt": {
+        "variable": "jj_pt",
+        "binning_linspace": [25, 250, 31],
+        "density": false,
+        "ylabel": "Events",
+        "xlabel": "$p_{T}(jj)$ [GeV]",
+        "color": "royalblue"
+    },
     "jj_dEta": {
         "variable": "jj_dEta",
-        "binning_linspace": [0, 9, 30],
+        "binning_linspace": [0, 9, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$\\Delta\\eta_{jj}$",
@@ -137,7 +145,7 @@
     },
     "jj_dPhi": {
         "variable": "jj_dPhi",
-        "binning_linspace": [0, 3.15, 30],
+        "binning_linspace": [0, 3.15, 31],
         "density": false,
         "ylabel": "Events / 1 GeV",
         "xlabel": "$\\Delta\\phi_{jj}$",
@@ -145,7 +153,7 @@
     },
     "jet1_pt": {
         "variable": "jet1_pt",
-        "binning_linspace": [25, 250, 30],
+        "binning_linspace": [0, 300, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$p_{T}(jet1)$ [GeV]",
@@ -153,7 +161,7 @@
     },
     "jet1_eta": {
         "variable": "jet1_eta",
-        "binning_linspace": [-4.7, 4.7, 30],
+        "binning_linspace": [-5, 5, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (jet1)$",
@@ -161,15 +169,24 @@
     },
     "jet1_phi": {
         "variable": "jet1_phi",
-        "binning_linspace": [-3.15, 3.15, 30],
+        "binning_linspace": [-3.15, 3.15, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\phi (jet1)$",
         "color": "royalblue"
     },
+    "jet1_qgl": {
+        "variable": "jet1_qgl",
+        "binning_linspace": [0, 1, 31],
+        "density": false,
+        "ylabel": "Events",
+        "xlabel": "$QGL (jet1)$",
+        "color": "royalblue",
+        "logscale": false,
+    },
     "jet2_pt": {
         "variable": "jet2_pt",
-        "binning_linspace": [25, 250, 30],
+        "binning_linspace": [0, 300, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$p_{T}(jet2)$ [GeV]",
@@ -177,7 +194,7 @@
     },
     "jet2_eta": {
         "variable": "jet2_eta",
-        "binning_linspace": [-4.7, 4.7, 30],
+        "binning_linspace": [-5, 5, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (jet2)$",
@@ -185,15 +202,24 @@
     },
     "jet2_phi": {
         "variable": "jet2_phi",
-        "binning_linspace": [-3.15, 3.15, 30],
+        "binning_linspace": [-3.15, 3.15, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\phi (jet2)$",
         "color": "royalblue"
     },
+    "jet2_qgl": {
+        "variable": "jet2_qgl",
+        "binning_linspace": [0, 1, 31],
+        "density": false,
+        "ylabel": "Events",
+        "xlabel": "$QGL (jet2)$",
+        "color": "royalblue",
+        "logscale": false,
+    },
     "mu1_pt": {
         "variable": "mu1_pt",
-        "binning_linspace": [20, 200, 30],
+        "binning_linspace": [0, 300, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$p_{T}(mu1)$ [GeV]",
@@ -201,7 +227,7 @@
     },
     "mu1_eta": {
         "variable": "mu1_eta",
-        "binning_linspace": [-2.4, 2.4, 30],
+        "binning_linspace": [-2.4, 2.4, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (mu1)$",
@@ -209,7 +235,7 @@
     },
     "mu1_phi": {
         "variable": "mu1_phi",
-        "binning_linspace": [-3.15, 3.15, 30],
+        "binning_linspace": [-3.15, 3.15, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\phi (mu1)$",
@@ -217,7 +243,7 @@
     },
     "mu2_pt": {
         "variable": "mu2_pt",
-        "binning_linspace": [20, 120, 30],
+        "binning_linspace": [0, 300, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$p_{T}(mu2)$ [GeV]",
@@ -225,7 +251,7 @@
     },
     "mu2_eta": {
         "variable": "mu2_eta",
-        "binning_linspace": [-2.4, 2.4, 30],
+        "binning_linspace": [-2.4, 2.4, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\eta (mu2)$",
@@ -233,7 +259,7 @@
     },
     "mu2_phi": {
         "variable": "mu2_phi",
-        "binning_linspace": [-3.15, 3.15, 30],
+        "binning_linspace": [-3.15, 3.15, 31],
         "density": false,
         "ylabel": "Events",
         "xlabel": "$\\phi (mu2)$",
