--- a/configs/parameters/cross_sections.yaml
+++ b/configs/parameters/cross_sections.yaml
@@ -5,6 +5,7 @@ cross_sections:
   dy_M-100To200: 254.2 # original value: 254.2
   dy_VBF_filter: 2.01  # subjet to change
   dy_VBF_filter_customJMEoff: 2.01 # subjet to change
+  dy_VBF_filter_fromGenSim: 2.01 # subjet to change
   dy_M-50To120: 254.2 # subjet to change
   dy_M-120To200: 254.2 # subjet to change
   dy_0j: 4620.52
