--- a/configs/parameters/jec.yaml
+++ b/configs/parameters/jec.yaml
@@ -92,6 +92,75 @@ jec_parameters:
     - RelativeSample2018_down
     - FlavorQCD_up
     - FlavorQCD_down
+    2016_RERECO:
+    - Absolute_up
+    - Absolute_down
+    - Absolute2016_up
+    - Absolute2016_down
+    - BBEC1_up
+    - BBEC1_down
+    - BBEC12016_up
+    - BBEC12016_down
+    - EC2_up
+    - EC2_down
+    - EC22016_up
+    - EC22016_down
+    - HF_up
+    - HF_down
+    - HF2016_up
+    - HF2016_down
+    - RelativeBal_up
+    - RelativeBal_down
+    - RelativeSample2016_up
+    - RelativeSample2016_down
+    - FlavorQCD_up
+    - FlavorQCD_down
+    '2017_RERECO':
+    - Absolute_up
+    - Absolute_down
+    - Absolute2017_up
+    - Absolute2017_down
+    - BBEC1_up
+    - BBEC1_down
+    - BBEC12017_up
+    - BBEC12017_down
+    - EC2_up
+    - EC2_down
+    - EC22017_up
+    - EC22017_down
+    - HF_up
+    - HF_down
+    - HF2017_up
+    - HF2017_down
+    - RelativeBal_up
+    - RelativeBal_down
+    - RelativeSample2017_up
+    - RelativeSample2017_down
+    - FlavorQCD_up
+    - FlavorQCD_down
+    '2018_RERECO':
+    - Absolute_up
+    - Absolute_down
+    - Absolute2018_up
+    - Absolute2018_down
+    - BBEC1_up
+    - BBEC1_down
+    - BBEC12018_up
+    - BBEC12018_down
+    - EC2_up
+    - EC2_down
+    - EC22018_up
+    - EC22018_down
+    - HF_up
+    - HF_down
+    - HF2018_up
+    - HF2018_down
+    - RelativeBal_up
+    - RelativeBal_down
+    - RelativeSample2018_up
+    - RelativeSample2018_down
+    - FlavorQCD_up
+    - FlavorQCD_down
     2022preEE:
     - Absolute_up
     - Absolute_down
@@ -160,6 +229,25 @@ jec_parameters:
     - B
     - C
     - D
+    2016_RERECO:
+    - B
+    - C
+    - D
+    - E
+    - F
+    - G
+    - H
+    '2017_RERECO':
+    - B
+    - C
+    - D
+    - E
+    - F
+    '2018_RERECO':
+    - A
+    - B
+    - C
+    - D
     2022preEE:
     - C
     - D
@@ -181,6 +269,18 @@ jec_parameters:
     - L2Relative
     - L3Absolute
     '2018':
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    2016_RERECO:
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    '2017_RERECO':
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    '2018_RERECO':
     - L1FastJet
     - L2Relative
     - L3Absolute
@@ -213,6 +313,21 @@ jec_parameters:
     - L2Relative
     - L3Absolute
     - L2L3Residual
+    2016_RERECO:
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    - L2L3Residual
+    '2017_RERECO':
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    - L2L3Residual
+    '2018_RERECO':
+    - L1FastJet
+    - L2Relative
+    - L3Absolute
+    - L2L3Residual
     2022preEE:
     - L1FastJet
     - L2Relative
@@ -228,6 +343,9 @@ jec_parameters:
     2016postVFP: Summer19UL16_V7_MC
     '2017': Summer19UL17_V5_MC
     '2018': Summer19UL18_V5_MC
+    2016_RERECO: Summer19UL16_V7_MC
+    '2017_RERECO': Summer19UL17_V5_MC
+    '2018_RERECO': Summer19UL18_V5_MC
     2022preEE: Summer19UL18_V5_MC
     2022postEE: Summer19UL18_V5_MC
   jer_tags:
@@ -235,6 +353,9 @@ jec_parameters:
     2016postVFP: Summer20UL16_JRV3_MC
     '2017': Summer19UL17_JRV2_MC
     '2018': Summer19UL18_JRV2_MC
+    2016_RERECO: Summer20UL16_JRV3_MC
+    '2017_RERECO': Summer19UL17_JRV2_MC
+    '2018_RERECO': Summer19UL18_JRV2_MC
     2022preEE: Summer19UL18_JRV2_MC
     2022postEE: Summer19UL18_JRV2_MC
   jec_data_tags:
@@ -263,6 +384,37 @@ jec_parameters:
       Summer19UL17_RunF_V5_DATA:
       - F
     '2018':
+      Summer19UL18_RunA_V5_DATA:
+      - A
+      Summer19UL18_RunB_V5_DATA:
+      - B
+      Summer19UL18_RunC_V5_DATA:
+      - C
+      Summer19UL18_RunD_V5_DATA:
+      - D
+    2016_RERECO: # temporary values
+      Summer19UL16APV_RunBCD_V7_DATA:
+      - B
+      - C
+      - D
+      Summer19UL16APV_RunEF_V7_DATA:
+      - E
+      - F
+      Summer19UL16_RunFGH_V7_DATA:
+      - G
+      - H
+    '2017_RERECO': # temporary values
+      Summer19UL17_RunB_V5_DATA:
+      - B
+      Summer19UL17_RunC_V5_DATA:
+      - C
+      Summer19UL17_RunD_V5_DATA:
+      - D
+      Summer19UL17_RunE_V5_DATA:
+      - E
+      Summer19UL17_RunF_V5_DATA:
+      - F
+    '2018_RERECO': # temporary values
       Summer19UL18_RunA_V5_DATA:
       - A
       Summer19UL18_RunB_V5_DATA:
@@ -324,6 +476,45 @@ jec_parameters:
     - jer6_up
     - jer6_down
     '2018':
+    - jer1_up
+    - jer1_down
+    - jer2_up
+    - jer2_down
+    - jer3_up
+    - jer3_down
+    - jer4_up
+    - jer4_down
+    - jer5_up
+    - jer5_down
+    - jer6_up
+    - jer6_down
+    2016_RERECO:
+    - jer1_up
+    - jer1_down
+    - jer2_up
+    - jer2_down
+    - jer3_up
+    - jer3_down
+    - jer4_up
+    - jer4_down
+    - jer5_up
+    - jer5_down
+    - jer6_up
+    - jer6_down
+    '2017_RERECO':
+    - jer1_up
+    - jer1_down
+    - jer2_up
+    - jer2_down
+    - jer3_up
+    - jer3_down
+    - jer4_up
+    - jer4_down
+    - jer5_up
+    - jer5_down
+    - jer6_up
+    - jer6_down
+    '2018_RERECO':
     - jer1_up
     - jer1_down
     - jer2_up
