--- a/configs/parameters/jet.yaml
+++ b/configs/parameters/jet.yaml
@@ -3,6 +3,9 @@ jet_pt_cut:
   2016postVFP: 25.0
   '2017': 25.0
   '2018': 25.0
+  2016_RERECO: 25.0
+  '2017_RERECO': 25.0
+  '2018_RERECO': 25.0
   2022preEE: 25.0
   2022postEE: 25.0
 jet_eta_cut:
@@ -10,6 +13,9 @@ jet_eta_cut:
   2016postVFP: 4.7
   '2017': 4.7
   '2018': 4.7
+  2016_RERECO: 4.7
+  '2017_RERECO': 4.7
+  '2018_RERECO': 4.7
   2022preEE: 4.7
   2022postEE: 4.7
 jet_id:
@@ -17,6 +23,9 @@ jet_id:
   2016postVFP: loose
   '2017': tight
   '2018': tight
+  2016_RERECO: loose
+  '2017_RERECO': tight
+  '2018_RERECO': tight
   2022preEE: tight
   2022postEE: tight
 jet_puid:
@@ -24,6 +33,9 @@ jet_puid:
   2016postVFP: loose
   '2017': loose
   '2018': loose
+  2016_RERECO: loose
+  '2017_RERECO': loose
+  '2018_RERECO': loose
   2022preEE: loose
   2022postEE: loose
 min_dr_mu_jet:
@@ -31,6 +43,9 @@ min_dr_mu_jet:
   2016postVFP: 0.4
   '2017': 0.4
   '2018': 0.4
+  2016_RERECO: 0.4
+  '2017_RERECO': 0.4
+  '2018_RERECO': 0.4
   2022preEE: 0.4
   2022postEE: 0.4
 btag_loose_wp:
@@ -38,6 +53,9 @@ btag_loose_wp:
   2016postVFP: 0.1918
   '2017': 0.1355
   '2018': 0.049
+  2016_RERECO: 0.1918
+  '2017_RERECO': 0.1355
+  '2018_RERECO': 0.049
   2022preEE: 0.12
   2022postEE: 0.12
 btag_medium_wp:
@@ -45,6 +63,9 @@ btag_medium_wp:
   2016postVFP: 0.4847
   '2017': 0.4506
   '2018': 0.4168
+  2016_RERECO: 0.4847
+  '2017_RERECO': 0.4506
+  '2018_RERECO': 0.4168
   2022preEE: 0.4168
   2022postEE: 0.4168
 softjet_dr2:
@@ -52,5 +73,8 @@ softjet_dr2:
   2016postVFP: 0.16
   '2017': 0.16
   '2018': 0.16
+  2016_RERECO: 0.16
+  '2017_RERECO': 0.16
+  '2018_RERECO': 0.16
   2022preEE: 0.16
   2022postEE: 0.16
