--- a/configs/parameters/misc.yaml
+++ b/configs/parameters/misc.yaml
@@ -43,6 +43,39 @@ sths_names:
   - Mjj1500
   - PTH25
   - JET01
+  2016_RERECO:
+  - Yield
+  - PTH200
+  - Mjj60
+  - Mjj120
+  - Mjj350
+  - Mjj700
+  - Mjj1000
+  - Mjj1500
+  - PTH25
+  - JET01
+  '2017_RERECO':
+  - Yield
+  - PTH200
+  - Mjj60
+  - Mjj120
+  - Mjj350
+  - Mjj700
+  - Mjj1000
+  - Mjj1500
+  - PTH25
+  - JET01
+  '2018_RERECO':
+  - Yield
+  - PTH200
+  - Mjj60
+  - Mjj120
+  - Mjj350
+  - Mjj700
+  - Mjj1000
+  - Mjj1500
+  - PTH25
+  - JET01
   2022preEE:
   - Yield
   - PTH200
@@ -106,6 +139,36 @@ btag_systs:
   - hf
   - lfstats1
   - lfstats2
+  2016_RERECO:
+  - jes
+  - lf
+  - hfstats1
+  - hfstats2
+  - cferr1
+  - cferr2
+  - hf
+  - lfstats1
+  - lfstats2
+  '2017_RERECO':
+  - jes
+  - lf
+  - hfstats1
+  - hfstats2
+  - cferr1
+  - cferr2
+  - hf
+  - lfstats1
+  - lfstats2
+  '2018_RERECO':
+  - jes
+  - lf
+  - hfstats1
+  - hfstats2
+  - cferr1
+  - cferr2
+  - hf
+  - lfstats1
+  - lfstats2
   2022preEE:
   - jes
   - lf
@@ -159,6 +222,30 @@ event_flags:
   - globalSuperTightHalo2016Filter
   - goodVertices
   - BadChargedCandidateFilter
+  2016_RERECO:
+  - BadPFMuonFilter
+  - EcalDeadCellTriggerPrimitiveFilter
+  - HBHENoiseFilter
+  - HBHENoiseIsoFilter
+  - globalSuperTightHalo2016Filter
+  - goodVertices
+  - BadChargedCandidateFilter
+  '2017_RERECO':
+  - BadPFMuonFilter
+  - EcalDeadCellTriggerPrimitiveFilter
+  - HBHENoiseFilter
+  - HBHENoiseIsoFilter
+  - globalSuperTightHalo2016Filter
+  - goodVertices
+  - BadChargedCandidateFilter
+  '2018_RERECO':
+  - BadPFMuonFilter
+  - EcalDeadCellTriggerPrimitiveFilter
+  - HBHENoiseFilter
+  - HBHENoiseIsoFilter
+  - globalSuperTightHalo2016Filter
+  - goodVertices
+  - BadChargedCandidateFilter
   2022preEE:
   - BadPFMuonFilter
   - EcalDeadCellTriggerPrimitiveFilter
@@ -180,6 +267,9 @@ do_l1prefiring_wgts:
   2016postVFP: true
   '2017': true
   '2018': false
+  2016_RERECO: true
+  '2017_RERECO': true
+  '2018_RERECO': false
   2022preEE: false
   2022postEE: false
 n_pdf_variations:
@@ -187,6 +277,9 @@ n_pdf_variations:
   2016postVFP: 100
   '2017': 33
   '2018': 33
+  2016_RERECO: 100
+  '2017_RERECO': 33
+  '2018_RERECO': 33
   2022preEE: 33
   2022postEE: 33
 dnn_max:
@@ -194,5 +287,8 @@ dnn_max:
   2016postVFP: 1.75
   '2017': 2.0
   '2018': 2.35
+  2016_RERECO: 1.75
+  '2017_RERECO': 2.0
+  '2018_RERECO': 2.35
   2022preEE: 2.35
   2022postEE: 2.35
