--- a/configs/parameters/jet.yaml
+++ b/configs/parameters/jet.yaml
@@ -53,7 +53,10 @@ btag_loose_wp:
   2016postVFP: 0.1918
   '2017': 0.1355
   '2018': 0.049
-  2016_RERECO: 0.2219
+  #2016_RERECO: 0.2219
+  #'2017_RERECO': 0.1522
+  #'2018_RERECO': 0.1241 
+  2016_RERECO: 0.2217
   '2017_RERECO': 0.1522
   '2018_RERECO': 0.1241 
   2022preEE: 0.12
@@ -63,7 +66,10 @@ btag_medium_wp:
   2016postVFP: 0.5847
   '2017': 0.4506
   '2018': 0.4168
-  2016_RERECO: 0.6324
+  # 2016_RERECO: 0.6324
+  # '2017_RERECO': 0.4941
+  # '2018_RERECO': 0.4184
+  2016_RERECO: 0.6321
   '2017_RERECO': 0.4941
   '2018_RERECO': 0.4184
   2022preEE: 0.4168
