adding in RERECO wgts though the btag weights are left as is for the time being

--- a/configs/datasets/2016_RERECO.yaml
+++ b/configs/datasets/2016_RERECO.yaml
@@ -6,3 +6,5 @@
   data_F: /SingleMuon/Run2016F-02Apr2020-v1/NANOAOD
   data_G: /SingleMuon/Run2016G-02Apr2020-v1/NANOAOD
   data_H: /SingleMuon/Run2016H-02Apr2020-v1/NANOAOD
+  ggh_amcPS: dummy
+  vbf_powheg: dummy
