--- a/configs/parameters/SF_filelist.yaml
+++ b/configs/parameters/SF_filelist.yaml
@@ -13,7 +13,7 @@ btag_sf_json:
   2016postVFP: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2016postVFP_UL/btagging.json.gz
   '2017': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2017_UL/btagging.json.gz
   '2018': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2018_UL/btagging.json.gz
-  2016_RERECO: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2016postVFP_UL/btagging.json.gz
+  2016_RERECO: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2016preVFP_UL/btagging.json.gz
   '2017_RERECO': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2017_UL/btagging.json.gz
   '2018_RERECO': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2018_UL/btagging.json.gz
   2022preEE: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2022_Summer22EE/btagging.json.gz
@@ -24,8 +24,8 @@ btag_sf_csv:
   '2017': data/btag/DeepCSV_106XUL17SF.csv
   '2018': data/btag/DeepCSV_106XUL18SF.csv
   2016_RERECO: data/btag/DeepCSV_2016LegacySF_V1.csv
-  '2017_RERECO': data/btag/DeepCSV_106XUL17SF.csv
-  '2018_RERECO': data/btag/DeepCSV_106XUL18SF.csv
+  '2017_RERECO': data/btag/DeepCSV_94XSF_V5_B_F.csv
+  '2018_RERECO': data/btag/DeepCSV_102XSF_V1.csv
   2022preEE: data/btag/DeepCSV_106XUL18SF.csv
   2022postEE: data/btag/DeepCSV_106XUL18SF.csv
 pu_file_data:
@@ -33,9 +33,9 @@ pu_file_data:
   2016postVFP: data/pileup/puData2016_UL_withVar.root
   '2017': data/pileup/puData2017_UL_withVar.root
   '2018': data/pileup/puData2018_UL_withVar.root
-  2016_RERECO: data/pileup/puData2016_UL_withVar.root
-  '2017_RERECO': data/pileup/puData2017_UL_withVar.root
-  '2018_RERECO': data/pileup/puData2018_UL_withVar.root
+  2016_RERECO: data/pileup/PileupData_GoldenJSON_Full2016.root
+  '2017_RERECO': data/pileup/puData2017_withVar.root
+  '2018_RERECO': data/pileup/puData2018_withVar.root
   2022preEE: dummy_only_pu_file_mc_is_needed
   2022postEE: dummy_only_pu_file_mc_is_needed
 pu_file_mc:
@@ -43,9 +43,9 @@ pu_file_mc:
   2016postVFP: data/pileup/mix_2016_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
   '2017': data/pileup/mix_2017_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
   '2018': data/pileup/mix_2018_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
-  2016_RERECO: data/pileup/mix_2016_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
-  '2017_RERECO': data/pileup/mix_2017_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
-  '2018_RERECO': data/pileup/mix_2018_25ns_UltraLegacy_PoissonOOTPU_cfi.yaml
+  2016_RERECO: data/pileup/pileup_profile_Summer16.root
+  '2017_RERECO': data/pileup/mcPileup2017.root
+  '2018_RERECO': data/pileup/mcPileup2018.root
   2022preEE: data/pileup/2022_Summer22/puWeights.json.gz 
   2022postEE: data/pileup/2022_Summer22EE/puWeights.json.gz 
 muSFFileList:
@@ -110,23 +110,34 @@ muSFFileList:
     scale: 0.8501841312353532
   2016_RERECO:
   - id:
-    - data/muon_sf/year2016/MuonSF_Run2016_UL_ID.root
-    - NUM_MediumID_DEN_TrackerMuons_abseta_pt
+    - data/muon_sf/year2016/RunBCDEF_SF_ID.root
+    - NUM_MediumID_DEN_genTracks_eta_pt
     iso:
-    - data/muon_sf/year2016/MuonSF_Run2016_UL_ISO.root
-    - NUM_TightRelIso_DEN_MediumID_abseta_pt
+    - data/muon_sf/year2016/RunBCDEF_SF_ISO.root
+    - NUM_TightRelIso_DEN_MediumID_eta_pt
+    trig:
+    - data/muon_sf/mu2016/EfficienciesStudies_2016_trigger_EfficienciesAndSF_RunBtoF.root
+    - IsoMu24_OR_IsoTkMu24_PtEtaBins/efficienciesDATA/abseta_pt_DATA
+    - IsoMu24_OR_IsoTkMu24_PtEtaBins/efficienciesMC/abseta_pt_MC
+    scale: 0.552197802
+  - id:
+    - data/muon_sf/year2016/RunGH_SF_ID.root
+    - NUM_MediumID_DEN_genTracks_eta_pt
+    iso:
+    - data/muon_sf/year2016/RunGH_SF_ISO.root
+    - NUM_TightRelIso_DEN_MediumID_eta_pt
     trig:
     - data/muon_sf/mu2016/EfficienciesStudies_2016_trigger_EfficienciesAndSF_RunGtoH.root
     - IsoMu24_OR_IsoTkMu24_PtEtaBins/efficienciesDATA/abseta_pt_DATA
     - IsoMu24_OR_IsoTkMu24_PtEtaBins/efficienciesMC/abseta_pt_MC
-    scale: 1.0
+    scale: 0.447802198
   '2017_RERECO':
   - id:
-    - data/muon_sf/year2017/MuonSF_Run2017_UL_ID.root
-    - NUM_MediumID_DEN_TrackerMuons_abseta_pt
+    - data/muon_sf/year2017/RunBCDEF_SF_ID.root
+    - NUM_MediumID_DEN_genTracks_pt_abseta
     iso:
-    - data/muon_sf/year2017/MuonSF_Run2017_UL_ISO.root
-    - NUM_TightRelIso_DEN_MediumID_abseta_pt
+    - data/muon_sf/year2017/RunBCDEF_SF_ISO.root
+    - NUM_TightRelIso_DEN_MediumID_pt_abseta
     trig:
     - data/muon_sf/mu2017/EfficienciesAndSF_RunBtoF_Nov17Nov2017.root
     - IsoMu27_PtEtaBins/efficienciesDATA/abseta_pt_DATA
@@ -134,27 +145,27 @@ muSFFileList:
     scale: 1.0
   '2018_RERECO':
   - id:
-    - data/muon_sf/year2018/MuonSF_Run2018_UL_ID.root
-    - NUM_MediumID_DEN_TrackerMuons_abseta_pt
+    - data/muon_sf/year2018/RunABCD_SF_ID.root
+    - NUM_MediumID_DEN_genTracks_pt_abseta
     iso:
-    - data/muon_sf/year2018/MuonSF_Run2018_UL_ISO.root
-    - NUM_TightRelIso_DEN_MediumID_abseta_pt
+    - data/muon_sf/year2018/RunABCD_SF_ISO.root
+    - NUM_TightRelIso_DEN_MediumID_pt_abseta
     trig:
     - data/muon_sf/mu2018/EfficienciesStudies_2018_trigger_EfficienciesAndSF_2018Data_BeforeMuonHLTUpdate.root
     - IsoMu24_PtEtaBins/efficienciesDATA/abseta_pt_DATA
     - IsoMu24_PtEtaBins/efficienciesMC/abseta_pt_MC
-    scale: 0.14981586876464678
+    scale: 0.149815869
   - id:
-    - data/muon_sf/year2018/MuonSF_Run2018_UL_ID.root
-    - NUM_MediumID_DEN_TrackerMuons_abseta_pt
+    - data/muon_sf/year2018/RunABCD_SF_ID.root
+    - NUM_MediumID_DEN_genTracks_pt_abseta
     iso:
-    - data/muon_sf/year2018/MuonSF_Run2018_UL_ISO.root
-    - NUM_TightRelIso_DEN_MediumID_abseta_pt
+    - data/muon_sf/year2018/RunABCD_SF_ISO.root
+    - NUM_TightRelIso_DEN_MediumID_pt_abseta
     trig:
     - data/muon_sf/mu2018/EfficienciesStudies_2018_trigger_EfficienciesAndSF_2018Data_AfterMuonHLTUpdate.root
     - IsoMu24_PtEtaBins/efficienciesDATA/abseta_pt_DATA
     - IsoMu24_PtEtaBins/efficienciesMC/abseta_pt_MC
-    scale: 0.8501841312353532
+    scale: 0.850184131
   2022preEE:
   - id:
     - data/muon_sf/year2017/MuonSF_Run2017_UL_ID.root
@@ -194,8 +205,8 @@ jetpuid_sf_file:
   2016postVFP: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   '2017': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   '2018': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
-  2016_RERECO: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
-  '2017_RERECO': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
-  '2018_RERECO': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
+  2016_RERECO: data/PUIDMaps.root
+  '2017_RERECO': data/PUIDMaps.root
+  '2018_RERECO': data/PUIDMaps.root
   2022preEE: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   2022postEE: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
