adding RERECO config (something I did months ago, but only getting to push now)

--- a/configs/datasets/2018_RERECO.yaml
+++ b/configs/datasets/2018_RERECO.yaml
@@ -4,4 +4,5 @@
   data_C: /SingleMuon/Run2018C-02Apr2020-v1/NANOAOD
   data_D: /SingleMuon/Run2018D-02Apr2020-v1/NANOAOD
   ggh_amcPS: dummy
+  ggh_powheg: dummy
   vbf_powheg: dummy
