--- a/configs/parameters/correction_filelist.yaml
+++ b/configs/parameters/correction_filelist.yaml
@@ -21,13 +21,13 @@ res_calib_path:
   '2018':
     MC: data/res_calib/res_calib_MC_2018.root
     Data: data/res_calib/res_calib_Data_2018.root
-  2016_RERECO: # temporary value 
+  2016_RERECO: 
     MC: data/res_calib/res_calib_MC_2016.root
     Data: data/res_calib/res_calib_Data_2016.root
-  '2017_RERECO': # temporary value 
+  '2017_RERECO': 
     MC: data/res_calib/res_calib_MC_2017.root
     Data: data/res_calib/res_calib_Data_2017.root
-  '2018_RERECO': # temporary value 
+  '2018_RERECO': 
     MC: data/res_calib/res_calib_MC_2018.root
     Data: data/res_calib/res_calib_Data_2018.root
   2022preEE:
